# cpp_flexnnlib

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in
ac-network/: BaseActorCriticNetwork.cpp
actor_critic/: Action.cpp  ActorCriticNet.cpp  ActorCriticNet2.cpp  (+16 more)
test/: CMakeLists.txt  CommonTestFixtureFunctions.cpp  TestLayer.cpp
test/actorcritic_tests/: ACActivationTests.h  ACTestFixture.h  ACTrainerTest.h  BaseDerbySim.h  BasicACTests.h  DerbySim.h  DerbySim0.h  DerbySim2.h  SteeringActionFeature.h  TestAction.h  TestActionFeature.h  test_main.cpp
test/actorcritic_tests/samples/: featureset1.json  logsig_ac_activate.json  radbas_ac_activate.json  softmax_ac_activate.json  tansig_ac_activate.json  tansig_ac_backprop_actor.json  tansig_ac_backprop_critic.json  tansig_ac_trainer.json  tansig_ac_trainer0.json  tansig_ac_trainer2.json
test/baselayer_activation_tests/: LayerActivationTestCase.h  test_logsig_activation.cpp  test_purelin_activation.cpp  test_radbas_activation.cpp  test_softmax_activation.cpp  test_tansig_activation.cpp
test/baselayer_activation_tests/samples/: logsig_activity_test1.json  logsig_activity_test2.json  purelin_activity_test1.json  purelin_activity_test2.json  radbas_activity_test1.json  softmax_activity_test1.json  tansig_activity_test1.json  tansig_activity_test2.json
test/basenn_activation_tests/: FaninNNActivationTestFixture.cpp  FaninNNActivationTestFixture.h  FanoutNNActivationTestFixture.cpp  FanoutNNActivationTestFixture.h  SingleLayerNNActivationTestFixture.cpp  SingleLayerNNActivationTestFixture.h  test_main.cpp
test/basenn_activation_tests/samples/: fanin_logsig_nnet_test_cases.json  fanin_purelin_nnet_test_cases.json  fanin_radbas_nnet_test_cases.json  fanin_softmax_nnet_test_cases.json  fanin_tansig_nnet_test_cases.json  fanout_logsig_nnet_test_cases.json  fanout_radbas_nnet_test_cases.json  fanout_tansig_nnet_test_cases.json  single_logsig_nnet_test_cases.json  single_purelin_nnet_test_cases.json  single_softmax_nnet_test_cases.json  single_tansig_nnet_test_cases.json
test/dataset_tests/: test_main.cpp
test/dataset_tests/samples/: fstest1.json  test.txt  test2.txt  test_write.txt
test/esimulator_tests/: DerbySim.h  DerbyTests.h  SteeringAction.h  SteeringActionFeature.h  test_main.cpp
test/evaluator_tests/: MockNN.h  test_main.cpp
test/evaluator_tests/sample/: simple_classifier.txt  test_simple_classifier.txt
test/include/: BaseNNActivationTestFixture.h  CommonTestFixtureFunctions.h  TemplateTestFixtureExample.cpp  TemplateTestFixtureExample.h  TestLayer.h
test/layer_activation_tests/: LayerActivationTestCase.cpp  LayerActivationTestCase.h  PureLinActivationTestCase.cpp  PureLinActivationTestCase.h  test_layer_activation.cpp  test_layer_activation.h  test_logsig_activation.cpp  test_purelin_activation.cpp  test_purelin_activation.h  test_radbas_activation.cpp  test_softmax_activation.cpp  test_tansig_activation.cpp
test/layer_activation_tests/samples/: logsig_activity_test1.json  logsig_activity_test2.json  purelin_activity_test1.json  purelin_activity_test2.json  radbas_activity_test1.json  softmax_activity_test1.json  tansig_activity_test1.json  tansig_activity_test2.json
test/layer_backprop_tests/: LayerBackpropTestFixture.h  test_layer_backprop.cpp
test/layer_constructor_tests/: test_layer_constructor.cpp  test_layer_constructor.h  test_logsig_constructor.h  test_purelin_constructor.h  test_radbas_constructor.h  test_softmax_constructor.h  test_tansig_constructor.h
test/layer_deriv_tests/: LayerDerivTestCase.cpp  LayerDerivTestCase.h  PureLinDerivTestCase.cpp  PureLinDerivTestCase.h  test_layer_derivatives.cpp  test_layer_derivatives.h
test/layer_deriv_tests/samples/: purelin_derivatives_test1.json
test/layer_serialization_tests/: test_layer_serialization.cpp  test_layer_serialization.h  test_logsig_serialization.cpp  test_purelin_serialization.cpp  test_radbas_serialization.cpp  test_softmax_serialization.cpp  test_tansig_serialization.cpp
test/networklayer_tests/: NNBuilderTestFixture.h  test_main.cpp
test/nn_activation_tests/: test_fanin_ffnnet_activation.cpp  test_fanin_ffnnet_activation.h  test_fanout_ffnnet_activation.cpp  test_fanout_ffnnet_activation.h  test_nn_activation.cpp  test_nn_activation.h  test_single_layer_nnet_activation.cpp  test_single_layer_nnet_activation.h
test/nn_activation_tests/samples/: fanin_logsig_ffnnet_test_cases.json  fanin_purelin_ffnnet_test_cases.json  fanin_radbas_ffnnet_test_cases.json  fanin_softmax_ffnnet_test_cases.json  fanin_tansig_ffnnet_test_cases.json  fanout_logsig_ffnnet_test_cases.json  fanout_purelin_ffnnet_test_cases.json  fanout_radbas_ffnnet_test_cases.json  fanout_softmax_ffnnet_test_cases.json  fanout_tansig_ffnnet_test_cases.json  single_radbas_nnet_test_cases.json  single_softmax_nnet_test_cases.json  single_tansig_nnet_test_cases.json  two_layer_logsig_ffnnet_test_cases.json  two_layer_purelin_ffnnet_test_cases.json  two_layer_radbas_ffnnet_test_cases.json  two_layer_softmax_ffnnet_test_cases.json  two_layer_tansig_ffnnet_test_cases.json
test/nn_basic_training_tests/: BasicBackpropTests.h  BasicCallTreeTests.h  BasicTrainerSeqTests.h  BasicTrainerTests.cpp  BasicTrainerTests.h  BoundedRandomWalkDataSet.h  ClassifierTrainingTests.h  DeepRLTests.h  MockNN.h  NNEvalConfigTests.h  SimpleBinaryClassifierDataSet.h  SupervisedTrainerTestFixture.h  TrainerConfigTests.h  test_main.cpp  test_nn_basic_training.cpp  test_nn_basic_training.h  test_single_layer_nnet_training.cpp  test_single_layer_nnet_training.h
test/nn_basic_training_tests/samples/: single_logsig_nnet_test_cases.json  single_purelin_nnet_test_cases.json  single_radbas_nnet_test_cases.json
test/nn_builder_tests/: NNBuilderTestFixture.h
test/nn_factory_tests/: test_add_single_layer_network.cpp  test_nn_factory.cpp  test_nn_factory.h  test_single_layer_nnet.cpp  test_single_layer_nnet.h
test/nn_serialization_tests/: test_nn_serialization.cpp  test_nn_serialization.h
test/nnio_tests/: FeatureSetTests.h  LabeledFeatureSet.h  TestAction.h  TestActionFeature.h  test_main.cpp
(+461 files in other folders)
